Attempt 9 at fixing overflow issue on mobile browser

--- a/src/index.css
+++ b/src/index.css
@@ -218,6 +218,7 @@ li{
   body {
     overflow:hidden;
     /* position:fixed; */
+    height: 100%;
   }
 
   .socialsDiv{
